fix shift when dropdown is active

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,11 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+	height: 100%;
+	width: 100%;
+}
+
 html,
 body {
   /* I'm not sure why you removed the width and height at 100%, but it's super important */
   height: 100%;
-  width: 100%;
   padding: 0;
   margin: 0;
   font-family: var(--montserrat), BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell,
